--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project Structure Example - By SharathchandarK</title>
+    <title>weatherApp - By Rithika</title>
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
+    <link rel="stylesheet" href=""https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="weather-input">
+        <div class="input-group">
+          <input type="text" id="userLocation" placeholder="Search for Places....">
+
+          <select class="converter" id="converter">
+            <option >^C</option>
+            <option >^F</option>
+          </select>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
