--- a/index.html
+++ b/index.html
@@ -1,36 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>weatherApp - By Rithika</title>
-    <link rel="stylesheet" href="style.css" />
-    <script defer src="script.js"></script>
-    <link rel="stylesheet" href=""https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>weatherApp - By Rithika</title>
+  <link rel="stylesheet" href="style.css" />
+  <script defer src="script.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+</head>
 
-  <!--================ BODY ==========================-->
-  <body>
-    <div class="container">
-      <div class="weather-input">
-        <div class="input-group">
-          <input type="text" id="userLocation" placeholder="Search for Places....">
+<body>
+  <div class="container">
+    <div class="weather-input">
+      <div class="input-group">
+        <input type="text" id="userLocation" placeholder="Search for Places....">
 
-          <select class="converter" id="converter">
-            <option >°C</option>
-            <option >°F</option>
-          </select>
+        <select class="converter" id="converter">
+          <option>°C</option>
+          <option>°F</option>
+        </select>
 
-          <i class="ri-search-fill"></i>
-        </div>
-
-        <div>
-          <div class="weatherIcon"></div>
-          <h2 class="temperature"></h2>
-          <div class="feelslike"></div>
-          <div class="description"></div>
-        </div>
+        <i class="fa-solid fa-magnifying-glass"></i>
       </div>
+
+      <div class="weatherIcon"></div>
+      <h2 class="temperature"></h2>
+      <div class="feelsLike"></div>
+      <div class="description"></div>
+      <hr />
+      <div class="date"></div>
+      <div class="city"></div>
     </div>
-  </body>
+
+    <div class="weather-output">
+      <h2 class="heading">Today's Highlights</h2>
+
+      <div class="Highlights">
+
+        <!-- HUMIDITY -->
+        <div class="humidity">
+          Humidity
+          <i class="fa-solid fa-water"></i>
+          <h1 id="HValue"></h1>
+        </div>
+
+        <!-- WIND SPEED -->
+        <div class="wind-speed">
+          Wind-speed
+          <i class="fa-solid fa-wind"></i>
+          <h1 id="WValue"></h1>
+        </div>
+
+        <!-- SUNRISE & SUNSET -->
+        <div class="sun-times">
+          <span>
+            <i class="fa-solid fa-sun"></i>
+            <p><span id="SRValue"></span> Sunrise</p>
+          </span>
+          <span>
+            <i class="fa-regular fa-sun"></i>
+            <p><span id="SSValue"></span> Sunset</p>
+          </span>
+        </div>
+
+        <!-- CLOUDS -->
+        <div class="clouds">
+          Clouds
+          <i class="fa-solid fa-cloud"></i>
+          <h1 id="CValue"></h1>
+        </div>
+
+        <!-- UV INDEX -->
+        <div class="uv-index">
+          UV Index
+          <i class="fa-solid fa-sun"></i>
+          <h1 id="UValue"></h1>
+        </div>
+
+        <!-- PRESSURE -->
+        <div class="pressure">
+          Pressure
+          <i class="fa-solid fa-gauge"></i>
+          <h1 id="PValue"></h1>
+        </div>
+
+      </div>
+
+      <br />
+      <h2 class="heading">This Week</h2>
+    </div>
+  </div>
+</body>
 </html>
