--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <option>°F</option>
         </select>
 
-        <i class="fa-solid fa-magnifying-glass"></i>
+        <i class="fa-solid fa-magnifying-glass" onclick="findUserLocation()"></i>
       </div>
 
       <div class="weatherIcon"></div>
@@ -34,13 +34,13 @@
 
     <div class="weather-output">
       <h2 class="heading">Today's Highlights</h2>
-
+      <br>
       <div class="Highlights">
 
         <!-- HUMIDITY -->
         <div class="humidity">
           Humidity
-          <i class="fa-solid fa-water"></i>
+          <i class="fa-solid fa-droplet"></i>
           <h1 id="HValue"></h1>
         </div>
 
@@ -55,11 +55,14 @@
         <div class="sun-times">
           <span>
             <i class="fa-solid fa-sun"></i>
-            <p><span id="SRValue"></span> Sunrise</p>
+            <p>Sunrise<br><br><h1 id="SRValue"></h1></p>
           </span>
+        </div>
+
+        <div class="sun-times">
           <span>
-            <i class="fa-regular fa-sun"></i>
-            <p><span id="SSValue"></span> Sunset</p>
+            <i class="fa-solid fa-sun"></i>
+            <p>Sunrise<br><br><h1 id="SSValue"></h1></p>
           </span>
         </div>
 
@@ -70,24 +73,17 @@
           <h1 id="CValue"></h1>
         </div>
 
-        <!-- UV INDEX -->
-        <div class="uv-index">
-          UV Index
-          <i class="fa-solid fa-sun"></i>
-          <h1 id="UValue"></h1>
-        </div>
-
         <!-- PRESSURE -->
         <div class="pressure">
           Pressure
-          <i class="fa-solid fa-gauge"></i>
+          <i class="fa-solid fa-volcano"></i>
           <h1 id="PValue"></h1>
         </div>
 
       </div>
 
       <br />
-      <h2 class="heading">This Week</h2>
+
     </div>
   </div>
 </body>
