--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
         <!-- SUNRISE & SUNSET -->
         <div class="sun-times">
           <span>
-            <i class="fa-solid fa-sun"></i>
+            <i class="fa-solid fa-cloud-sun"></i>
             <p>Sunrise<br><br><h1 id="SRValue"></h1></p>
           </span>
         </div>
 
         <div class="sun-times">
           <span>
-            <i class="fa-solid fa-sun"></i>
-            <p>Sunrise<br><br><h1 id="SSValue"></h1></p>
+            <i class="fa-solid fa-mountain-sun"></i>
+            <p>Sunset<br><br><h1 id="SSValue"></h1></p>
           </span>
         </div>
 
